--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             try {
                 const response = await fetch(tokenUrl, {
-                    method: POST,
+                    method: 'POST',
                     headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
                     body: params.toString()
                 });
